fix: modals not showing

--- a/src/components/modals/shareDocModle.css
+++ b/src/components/modals/shareDocModle.css
@@ -14,10 +14,9 @@
     background-color: #fefefe;
     margin: 10% auto; /* 10% from the top and centered */
     padding: 20px;
-    padding-bottom: 80px;
     border: 1px solid #888;
-    width: 30%; /* Could be more or less, depending on screen size */
   }
+  
   
   .close {
     color: #aaa;
